# CMakeList.txt: проект CMake для Test; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

project ("Test")

# Добавьте источник в исполняемый файл этого проекта.
add_executable (Test "Test.cpp")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
